--- a/config/black_box/diy.yaml
+++ b/config/black_box/diy.yaml
@@ -3,7 +3,7 @@
 #common parameters
 imu_topic: "/mavros/imu/data_raw"
 image_topic: "/arducam/triggered/camera/image_raw"
-output_path: "/home/ncrl/catkin_ws1/src/VINS-Mono/support_files"
+output_path: "/home/ncrl/catkin_ws/src/VINS-Mono/support_files"
 
 #camera calibration 
 model_type: PINHOLE
@@ -53,10 +53,10 @@ extrinsicTranslation: !!opencv-matrix
    rows: 3
    cols: 1
    dt: d
-   data: [0.10, 0, -0.10]
+   data: [-0.10, 0 , 0.10]
 
 #feature traker paprameters
-max_cnt: 100            # max feature number in feature tracking
+max_cnt: 200            # max feature number in feature tracking
 min_dist: 25            # min distance between two features 
 freq: 10                # frequence (Hz) of publish tracking result. At least 10Hz for good estimation. If set 0, the frequence will be same as raw image 
 F_threshold: 1.0        # ransac threshold (pixel)
@@ -70,14 +70,14 @@ keyframe_parallax: 10.0 # keyframe selection threshold (pixel)
 #imu parameters       The more accurate parameters you provide, the better performance
 #acc_n: 0.08          # accelerometer measurement noise standard deviation. #0.2   0.04
 #gyr_n: 0.004         # gyroscope measurement noise standard deviation.     #0.05  0.004
-acc_n: 0.4          # accelerometer measurement noise standard deviation. #0.2   0.04
-gyr_n: 0.05         # gyroscope measurement noise standard deviation.     #0.05  0.004
-acc_w: 0.04         # accelerometer bias random work noise standard deviation.  #0.02
-gyr_w: 4.0e-5       # gyroscope bias random work noise standard deviation.     #4.0e-5
-g_norm: 9.805    # gravity magnitude
+acc_n: 0.02          # accelerometer measurement noise standard deviation. #0.2   0.04
+gyr_n: 0.072       # gyroscope measurement noise standard deviation.     #0.05  0.004
+acc_w: 6.016e-4        # accelerometer bias random work noise standard deviation.  #0.02
+gyr_w: 0.00149       # gyroscope bias random work noise standard deviation.     #4.0e-5
+g_norm: 9.81    # gravity magnitude
 
 #loop closure parameters
-loop_closure: 0                    # start loop closure
+loop_closure: 1                    # start loop closure
 fast_relocalization: 1             # useful in real-time and large project
 load_previous_pose_graph: 0        # load and reuse previous pose graph; load from 'pose_graph_save_path'
 pose_graph_save_path: "/home/ncrl/catkin_ws1/src/VINS-Mono/support_files" # save and load path
